# bender_project_ros

./: README.md
code/deformation_control/: CMakeLists.txt  package.xml
code/deformation_control/launch/: calibration.launch  deformation_input_computation.launch  ee_position_ctrl.launch  jacobian_computation.launch  joint_position_manager.launch  marker_detector.launch  model.launch  model_planning.launch  planning.launch  schunk_controller.launch
code/deformation_control/src/: calibration.cpp  deformation_input_computation.cpp  ee_position_control.cpp  eiquadprog.hpp  jacobian_computation.cpp  joint_position_manager.cpp  marker_detector.cpp  schunk_controller.cpp
code/deformation_control/src/joint_positions/: alignment_error.txt  alignment_error0.txt  alignment_error1.txt  alignment_error10.txt  alignment_error11.txt  alignment_error12.txt  alignment_error13.txt  alignment_error15.txt  alignment_error2.txt  alignment_error3.txt  alignment_error5.txt  alignment_error6.txt  alignment_error8.txt  alignment_error9.txt  beam_markers0.txt  beam_markers1.txt  beam_markers11.txt  beam_markers12.txt  beam_markers13.txt  beam_markers15.txt  beam_markers16.txt  beam_markers2.txt  beam_markers4.txt  beam_markers5.txt  beam_markers6.txt  beam_markers7.txt  beam_markers9.txt  current_input.txt  current_input0.txt  current_input1.txt  current_input10.txt  current_input11.txt  current_input12.txt  current_input13.txt  current_input15.txt  current_input2.txt  current_input4.txt  current_input5.txt  current_input6.txt  current_input8.txt  (+34 more)
code/dualarm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
code/dualarm_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kuka_pedestal.srdf  ompl_planning.yaml  ros_controllers.yaml
code/dualarm_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
